# food-intel

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/scripts/: demo.py  enrich_nutrition.py  import_off_dump.py  sqlite_to_postgres.py
backend/src/food_intel/: config.py
backend/src/food_intel/adapters/llm/: __init__.py  anthropic_provider.py  base.py  null_provider.py  openai_provider.py
backend/src/food_intel/adapters/product_lookup/: base.py  multi_source.py  openfoodfacts.py  postgres_lookup.py  seed_data.yaml  seed_lookup.py  sqlite_lookup.py
backend/src/food_intel/api/: app.py  deps.py  schemas.py
backend/src/food_intel/api/routes/: analyze.py  health.py  prefill.py  product.py
backend/src/food_intel/core/: __init__.py  analyze.py  confidence.py  ingredient_parser.py  models.py  scoring.py
backend/src/food_intel/core/rules/: definitions.py  engine.py
backend/src/food_intel/core/rules/config/: additives_v1.yaml  baby_food_v1.yaml  cosmetics_ingredients_v1.yaml  cosmetics_v1.yaml  rules_v1.yaml
backend/src/food_intel/services/: analyze.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_confidence.py  test_golden_examples.py  test_ingredient_parser.py  test_llm_null_provider.py  test_product_types.py  test_rules_engine.py  test_scoring.py
docs/: api.md  architecture.md  deployment.md  render.md  rules-reference.md  scoring-model.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
mobile/: README.md  pubspec.yaml
mobile/lib/: analysis_provider.dart  api_client.dart  config.dart  main.dart  (+2 more)
(+18 files in other folders)
